# Advanced-Tic-Tac-Toe

./: README.md  dialog.cpp  dialog.h  login.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  semi.pro  semi.pro.user.b21b132  twoplayer.cpp  twoplayer.h  twoplayer.ui
.github/workflows/: main.yml  mariam.yml
Documentation/: Software Requirements Specification (SRS).docx
GAME/: CMakeLists.txt
GAME/SQL/: database.cpp  database.h  database.sql  setup.sql
GAME/include/: CLASSES.hpp  database.h
GAME/src/: AI.cpp  Game.cpp  GameManager.cpp  Player.cpp  database  database.cpp  gamehistory.cpp  main.cpp
GUI/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  TicTacToe.cpp  TicTacToe.h  TicTacToe.ui  ai.cpp  ai.h  ai.ui  aihard.cpp  aihard.h  aihard.ui  aimedium.cpp  aimedium.h  aimedium.ui  board1.cpp  board1.h  board1.ui  build.ninja  cmake_install.cmake  database.cpp  database.h  dialog.cpp  dialog.h  dialog.ui  dialog2.cpp  easy.cpp  easy.h  easy.ui  gameboard.cpp  gameboard.h  gameboard.ui  gamehistory.cpp  gamehistory.h  gamehistorydialog.cpp  gamehistorydialog.h  gamehistorydialog.ui  hard.h  hard.ui  (+36 more)
test/: ai.cpp  aihard.cpp  dialog.cpp  dialog.ui  gameboard.h  gamehistorydialog.cpp  gamehistorydialog.h  hard1.h  login.cpp  login.h  mainwindow.h  medium.h  medium.ui  semi.pro  semi.pro.user.2c298d4  twoplayer.cpp  twoplayer.h
testt/: aihard.cpp  aihard.h  aihard.ui  dialog.h  dialog.ui  dialog2.h  gamehistory.cpp  gamehistorydialog.ui  hard1.cpp  hard1.h  hard1.ui  login.h  main.cpp  mainwindow.cpp  semi.pro  tst_test.cpp  twoplayer.cpp
(+94 files in other folders)
